# docs/swagger.yaml
@@ -1,4 +1,4 @@
-basePath: /
+basePath: /api
 definitions:
   github_com_leonibeldev_askme_pkg_utils_models.BlogPost:
     properties:
@@ -13,11 +13,49 @@ definitions:
     - content
     - position
     type: object
+  github_com_leonibeldev_askme_pkg_utils_models.DBUser:
+    properties:
+      created_at:
+        type: string
+      email:
+        type: string
+      external_link:
+        type: string
+      fullname:
+        type: string
+      github:
+        type: string
+      id:
+        type: integer
+      instagram:
+        type: string
+      is_verified:
+        type: boolean
+      password:
+        minLength: 6
+        type: string
+      resume:
+        type: string
+      role:
+        type: string
+      twitter:
+        type: string
+      username:
+        type: string
+    required:
+    - email
+    - fullname
+    - password
+    type: object
   github_com_leonibeldev_askme_pkg_utils_models.Login:
     properties:
       email:
         type: string
+      fullname:
+        type: string
       password:
+        type: string
+      username:
         type: string
     required:
     - email
@@ -40,6 +78,8 @@ definitions:
         type: string
       date:
         type: string
+      fullname:
+        type: string
       id:
         type: string
       sections:
@@ -52,6 +92,8 @@ definitions:
         type: array
       title:
         type: string
+      views:
+        type: integer
       visible:
         type: boolean
     required:
@@ -59,24 +101,24 @@ definitions:
     - tags
     - title
     type: object
-  github_com_leonibeldev_askme_pkg_utils_models.User:
+  github_com_leonibeldev_askme_pkg_utils_models.ResponseMessage:
     properties:
-      email:
+      data: {}
+      error:
         type: string
-      name:
+      message:
         type: string
-      password:
-        type: string
-    required:
-    - email
-    - name
-    - password
+      success:
+        type: boolean
     type: object
 host: localhost:3000
 info:
-  contact: {}
-  description: API for authentication, blog management, and newsletter subscription.
-  title: AskMe API
+  contact:
+    email: leonibel.ramirez@gmail.com
+    name: LeonibelDev
+  description: API for mytechblog platform.
+  termsOfService: work in progress
+  title: mytechblog API
   version: "1.0"
 paths:
   /admin/home:
@@ -103,8 +145,7 @@ paths:
         "200":
           description: OK
           schema:
-            additionalProperties: true
-            type: object
+            $ref: '#/definitions/github_com_leonibeldev_askme_pkg_utils_models.ResponseMessage'
       security:
       - ApiKeyAuth: []
       summary: Get admin user
@@ -155,135 +196,26 @@ paths:
         name: user
         required: true
         schema:
-          $ref: '#/definitions/github_com_leonibeldev_askme_pkg_utils_models.User'
+          $ref: '#/definitions/github_com_leonibeldev_askme_pkg_utils_models.DBUser'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            additionalProperties:
-              type: string
-            type: object
+            allOf:
+            - $ref: '#/definitions/github_com_leonibeldev_askme_pkg_utils_models.ResponseMessage'
+            - properties:
+                data:
+                  type: string
+              type: object
         "400":
           description: Bad Request
           schema:
-            additionalProperties:
-              type: string
-            type: object
+            $ref: '#/definitions/github_com_leonibeldev_askme_pkg_utils_models.ResponseMessage'
       summary: Register new user
       tags:
       - Auth
-  /blog:
-    get:
-      parameters:
-      - description: Offset for pagination
-        in: query
-        name: offset
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            additionalProperties: true
-            type: object
-        "400":
-          description: Bad Request
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-      summary: Get all blog posts with optional pagination
-      tags:
-      - Blog
-  /blog/{id}:
-    get:
-      parameters:
-      - description: Post ID
-        in: path
-        name: id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            additionalProperties: true
-            type: object
-        "404":
-          description: Not Found
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-      summary: Get a single blog post by ID
-      tags:
-      - Blog
-  /blog/new:
-    post:
-      consumes:
-      - application/json
-      parameters:
-      - description: Blog Post
-        in: body
-        name: post
-        required: true
-        schema:
-          $ref: '#/definitions/github_com_leonibeldev_askme_pkg_utils_models.Post'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            additionalProperties: true
-            type: object
-        "400":
-          description: Bad Request
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-        "500":
-          description: Internal Server Error
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-      security:
-      - BearerAuth: []
-      summary: Create a new blog post
-      tags:
-      - Blog
-  /blog/tag:
-    get:
-      parameters:
-      - description: Tag to filter posts
-        in: query
-        name: tag
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            additionalProperties: true
-            type: object
-        "404":
-          description: Not Found
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-      summary: Get blog posts filtered by tag
-      tags:
-      - Blog
   /newsletter:
     post:
       consumes:
@@ -339,4 +271,161 @@ paths:
       summary: Unsubscribe from newsletter
       tags:
       - Newsletter
+  /posts:
+    get:
+      description: Retrieve paginated list of blog posts
+      parameters:
+      - description: Pagination offset
+        in: query
+        name: offset
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/github_com_leonibeldev_askme_pkg_utils_models.ResponseMessage'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/github_com_leonibeldev_askme_pkg_utils_models.Post'
+                  type: array
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/github_com_leonibeldev_askme_pkg_utils_models.ResponseMessage'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/github_com_leonibeldev_askme_pkg_utils_models.ResponseMessage'
+      summary: Get all blog posts
+      tags:
+      - Blog
+  /posts/{id}:
+    get:
+      description: Retrieve a single blog post using its unique identifier
+      parameters:
+      - description: Post ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/github_com_leonibeldev_askme_pkg_utils_models.ResponseMessage'
+            - properties:
+                data:
+                  $ref: '#/definitions/github_com_leonibeldev_askme_pkg_utils_models.Post'
+              type: object
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/github_com_leonibeldev_askme_pkg_utils_models.ResponseMessage'
+      summary: Get a blog post by ID
+      tags:
+      - Blog
+  /posts/new:
+    post:
+      consumes:
+      - application/json
+      description: Create a blog post (authentication required)
+      parameters:
+      - description: Blog post payload
+        in: body
+        name: post
+        required: true
+        schema:
+          $ref: '#/definitions/github_com_leonibeldev_askme_pkg_utils_models.Post'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/github_com_leonibeldev_askme_pkg_utils_models.ResponseMessage'
+            - properties:
+                data:
+                  type: string
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/github_com_leonibeldev_askme_pkg_utils_models.ResponseMessage'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/github_com_leonibeldev_askme_pkg_utils_models.ResponseMessage'
+      security:
+      - BearerAuth: []
+      summary: Create a new blog post
+      tags:
+      - Blog
+  /posts/tag:
+    get:
+      description: Retrieve blog posts filtered by tag
+      parameters:
+      - description: Tag name
+        in: query
+        name: tag
+        required: true
+        type: string
+      - description: Pagination offset
+        in: query
+        name: offset
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/github_com_leonibeldev_askme_pkg_utils_models.ResponseMessage'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/github_com_leonibeldev_askme_pkg_utils_models.Post'
+                  type: array
+              type: object
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/github_com_leonibeldev_askme_pkg_utils_models.ResponseMessage'
+      summary: Get posts by tag
+      tags:
+      - Blog
+  /posts/top:
+    get:
+      description: Retrieve top blog posts ordered by views
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/github_com_leonibeldev_askme_pkg_utils_models.ResponseMessage'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/github_com_leonibeldev_askme_pkg_utils_models.Post'
+                  type: array
+              type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/github_com_leonibeldev_askme_pkg_utils_models.ResponseMessage'
+      summary: Get top blog posts
+      tags:
+      - Blog
 swagger: "2.0"
