# internal/controllers/blogcontroller.go
@@ -27,8 +27,8 @@ func SavePost(post models.Post) (string, error) {
 
 	// First insert data in post table
 	query := `
-		INSERT INTO posts (title, cover, author, fullname, tags) 
-		VALUES ($1, $2, $3, $4, $5) 
+		INSERT INTO posts (title, cover, author, fullname, tags)
+		VALUES ($1, $2, $3, $4, $5)
 		RETURNING id
 
 	`
@@ -40,7 +40,7 @@ func SavePost(post models.Post) (string, error) {
 
 	// Then insert sections in po
 	querySections := `
-		INSERT INTO blog_posts (position, type, content, post_id) 
+		INSERT INTO blog_posts (position, type, content, post_id)
 		VALUES ($1, $2, $3, $4)
 	`
 
@@ -62,8 +62,21 @@ func SavePost(post models.Post) (string, error) {
 
 func GetAllPostsFromDB(offset string) ([]models.Post, error) {
 
+	pagination := "page:" + offset
+
+	// get pagination from redis
+	cached, err := db.RedisClient.Get(db.Ctx, pagination).Result()
+	if err == nil {
+		var posts []models.Post
+		err = json.Unmarshal([]byte(cached), &posts)
+
+		if err == nil {
+			return posts, err
+		}
+	}
+
 	query := fmt.Sprintf(`
-		SELECT 
+		SELECT
 			p.id, p.title, p.cover, p.author, p.fullname, p.date, p.visible, p.tags,
 			b.position, b.type, b.content
 		FROM posts p
@@ -117,6 +130,10 @@ func GetAllPostsFromDB(offset string) ([]models.Post, error) {
 		posts = append(posts, post)
 	}
 
+	// save pagination if not exist in redis
+	jsonData, _ := json.Marshal(posts)
+	db.RedisClient.Set(db.Ctx, pagination, string(jsonData), time.Minute*2)
+
 	return posts, nil
 }
 
@@ -130,32 +147,38 @@ func GetOnePostFromDB(uuid string) (models.Post, error) {
 		// return cached post -> from redis to front
 		var post models.Post
 		err = json.Unmarshal([]byte(cached), &post)
+
+		// increment views in redis
+		post.Views += 1
+		jsonData, _ := json.Marshal(post)
+		db.RedisClient.Set(db.Ctx, cacheKey, jsonData, time.Hour)
+
 		if err == nil {
 			return post, nil
 		}
 	}
 
 	query := `
-		SELECT id, title, cover, date, visible, tags, author, fullname FROM posts WHERE id = $1
+		SELECT id, title, cover, date, visible, tags, author, fullname, views FROM posts WHERE id = $1
 	`
 	var post models.Post
 	var tags string
 
-	err = db.Conn.QueryRow(context.Background(), query, uuid).Scan(&post.ID, &post.Title, &post.Cover, &post.Date, &post.Visible, &tags, &post.Author, &post.FullName)
+	err = db.Conn.QueryRow(context.Background(), query, uuid).Scan(&post.ID, &post.Title, &post.Cover, &post.Date, &post.Visible, &tags, &post.Author, &post.FullName, &post.Views)
 
 	if err != nil {
-		return models.Post{}, nil
+		return post, err
 	}
 
 	post.Tags = append(post.Tags, strings.Split(tags, ", ")...)
 
 	// find sections
 
-	query_sections := `
-			SELECT position, type, content FROM blog_posts WHERE post_id = $1 ORDER BY position ASC
+	querySections := `
+			SELECT id, position, type, content FROM blog_posts WHERE post_id = $1 ORDER BY position ASC
 		`
 
-	rows, err := db.Conn.Query(context.Background(), query_sections, uuid)
+	rows, err := db.Conn.Query(context.Background(), querySections, uuid)
 	if err != nil {
 		return models.Post{}, err
 	}
@@ -163,22 +186,28 @@ func GetOnePostFromDB(uuid string) (models.Post, error) {
 	for rows.Next() {
 		var section models.BlogPost
 
-		if err = rows.Scan(&section.Position, &section.Type, &section.Content); err != nil {
+		if err = rows.Scan(&section.ID, &section.Position, &section.Type, &section.Content); err != nil {
 			return models.Post{}, err
 		}
 
 		post.Sections = append(post.Sections, section)
 	}
 
+	// increment views
+	post.Views += 1
+	_, err = db.Conn.Exec(context.Background(), "UPDATE posts SET views = $1 WHERE ID = $2", post.Views, post.ID)
+
+	// if post don't exist in redis, save it
 	jsonData, _ := json.Marshal(post)
 	db.RedisClient.Set(db.Ctx, cacheKey, jsonData, time.Hour)
+
 	return post, nil
 }
 
-func GetPostsByTags(tag string) ([]models.Post, error) {
+func GetPostsByTags(tag string, offset string) ([]models.Post, error) {
 
 	query := `
-		SELECT 
+		SELECT
 			p.id, p.title, p.cover, p.author, p.date, p.visible, p.tags,
 			b.position, b.type, b.content
 		FROM posts p
@@ -191,9 +220,10 @@ func GetPostsByTags(tag string) ([]models.Post, error) {
 		) b ON true
 		WHERE p.tags ILIKE $1
 		ORDER BY p.date DESC
+		LIMIT 5 OFFSET $2
 		`
 
-	rows, err := db.Conn.Query(context.Background(), query, "%"+tag+"%")
+	rows, err := db.Conn.Query(context.Background(), query, "%"+tag+"%", offset)
 	if err != nil {
 		return nil, err
 	}
@@ -231,4 +261,122 @@ func GetPostsByTags(tag string) ([]models.Post, error) {
 	}
 
 	return posts, nil
+}
+
+func GetTopPosts(limit int) ([]models.Post, error) {
+	cackeKey := fmt.Sprintf("top_posts:%d", limit)
+
+	// check in redis first
+	cached, err := db.RedisClient.Get(db.Ctx, cackeKey).Result()
+	if err == nil {
+		var posts []models.Post
+		err = json.Unmarshal([]byte(cached), &posts)
+
+		if err == nil {
+			return posts, nil
+		}
+	}
+
+	query := `
+		SELECT id, title, cover, fullname, tags, date
+		FROM posts
+		ORDER BY views DESC
+		LIMIT $1
+	`
+
+	rows, err := db.Conn.Query(context.Background(), query, limit)
+	if err != nil {
+		return nil, err
+	}
+
+	var posts []models.Post
+
+	for rows.Next() {
+		var post models.Post
+		var tags string
+
+		err = rows.Scan(&post.ID, &post.Title, &post.Cover, &post.FullName, &tags, &post.Date)
+		if err != nil {
+			return nil, err
+		}
+
+		post.Tags = strings.Split(tags, ", ")
+
+		posts = append(posts, post)
+	}
+
+	// save in redis
+	jsonData, _ := json.Marshal(posts)
+	db.RedisClient.Set(db.Ctx, cackeKey, string(jsonData), time.Hour*10)
+
+	return posts, nil
+}
+
+func GetPostsByAuthor(author string, offset string) ([]models.Post, error) {
+	query := `
+		SELECT id, title, cover, date, visible, tags
+		FROM posts
+		WHERE author = $1
+		ORDER BY date DESC
+		LIMIT 5 OFFSET $2
+	`
+
+	rows, err := db.Conn.Query(context.Background(), query, author, offset)
+	if err != nil {
+		return nil, err
+	}
+
+	var posts []models.Post
+
+	for rows.Next() {
+		var post models.Post
+		var tags string
+
+		err = rows.Scan(&post.ID, &post.Title, &post.Cover, &post.Date, &post.Visible, &tags)
+		if err != nil {
+			return nil, err
+		}
+
+		post.Tags = strings.Split(tags, ", ")
+
+		posts = append(posts, post)
+	}
+
+	return posts, nil
+}
+
+func UpdatePost(post models.Post, user string) (bool, error) {
+	cacheKey := "post:" + post.ID
+
+	query := `
+		UPDATE posts
+		SET
+			title = $1,
+			cover = $2,
+			tags = $3
+		WHERE
+			id = $4
+		AND
+			author = $5
+
+	`
+
+	_, err := db.Conn.Exec(context.Background(),
+		query,
+		post.Title,
+		post.Cover,
+		strings.Join(post.Tags, ", "),
+		post.ID,
+		user,
+	)
+	if err != nil {
+		return false, err
+	}
+
+	/*
+	 * Update post on redis cache
+	 */
+	db.RedisClient.Del(db.Ctx, cacheKey)
+
+	return true, nil
 }
